--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
             <li><a class="waves-effect active" href="#" id="incomeBtn">Income</a></li>
             <li><a class="waves-effect" href="" id="expensesBtn">Expenses</a></li>
             <li><a class="subheader">Subheader</a></li>
-            <li><a class="waves-effect" href="#!">Logout</a></li>
+            <li><a class="waves-effect" href="/logout">Logout</a></li>
             <li><a class="waves-effect" href="#!">About</a></li>
       </div>
     
