--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,11 +8,12 @@ body {
   display: flex;
   align-content: center;
   align-items: center;
-  overflow: hidden; }
+  z-index: -1; }
 
 .container {
   width: 90%;
-  text-align: center; }
+  text-align: center;
+  overflow: hidden; }
   .container .avatar {
     width: 40%;
     margin: auto; }
