--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,13 +11,13 @@
                 
                 <div class="input-field">
                     <i class="material-icons prefix">email</i>
-                    <input id="email" type="email" class="validate">
+                    <input id="email" type="email" name="username" class="validate">
                     <label for="email">Email</label>
-                    <span class="helper-text" data-error="wrong" data-success="right"></span>
+                    <span class="helper-text" data-error="Enter valid Email" data-success="Correct"></span>
                 </div>
                 <div class="input-field">
                     <i class="material-icons prefix">lock</i>
-                    <input id="password" type="password" class="validate">
+                    <input id="password" type="password" name="password" class="validate">
                     <label for="password">Password</label>
                 </div>
     
