--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,9 +5,6 @@
   a.sidenav-trigger {
     display: none; } }
 
-section {
-  background-color: lightblue; }
-
 /**********************************************
 *** GENERAL
 **********************************************/
@@ -26,7 +23,6 @@ body {
   font-family: Open Sans;
   font-size: 16px;
   position: relative;
-  height: 100vh;
   font-weight: 400; }
 
 .right {
@@ -127,6 +123,9 @@ i.menu {
 /**********************************************
 *** BOTTOM PART
 **********************************************/
+.bottom {
+  background-color: white; }
+
 /***** FORM *****/
 .add {
   padding: 14px;
@@ -177,9 +176,6 @@ i.menu {
   /* line-height: 1.1; */
   /* margin-left: 10px; */ }
 
-.add__btn i {
-  font-size: 35px; }
-
 .add__btn:active {
   transform: translateY(2px); }
 
@@ -195,7 +191,7 @@ i.menu {
 /***** LISTS *****/
 .container {
   width: 90%;
-  margin: 60px auto; }
+  overflow: auto; }
 
 .income {
   float: left;
@@ -297,4 +293,71 @@ h2 {
 
 @media only screen and (min-width: 993px) {
   .container {
-    width: 60%; } }
+    width: 60%; }
+  .add__container {
+    display: flex;
+    align-items: center; } }
+
+/*
+    ASIDE FLOATING BUTTON
+*/
+section {
+  opacity: 1;
+  transition: opacity 0.2s, filter 0.2s; }
+
+section.add-btn-clicked {
+  opacity: 0.5;
+  pointer-events: none; }
+
+.floating {
+  position: fixed;
+  bottom: 8px;
+  right: 8px;
+  pointer-events: none; }
+  .floating .options {
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
+    align-items: stretch;
+    justify-content: space-around;
+    height: 100px; }
+
+.floating.active {
+  pointer-events: all; }
+  .floating.active .options {
+    visibility: visible; }
+
+.floating button {
+  transform: translate(0, 30%);
+  opacity: 0;
+  transition: transform 0.2s, opacity 0.2s;
+  transition-timing-function: ease-in-out; }
+
+.floating.active button {
+  transform: translate(0, 0);
+  opacity: 1;
+  transition: transform 0.2s, opacity 0.2s; }
+
+.btn-floating-add {
+  transform: rotate(0);
+  transition: transform 0.2s;
+  pointer-events: all !important;
+  float: right; }
+
+.btn-floating-add.clicked {
+  transform: rotate(-45deg); }
+
+body {
+  padding-bottom: 70px; }
+
+@media only screen and (min-width: 993px) {
+  .floating {
+    display: none; } }
+
+/*
+** HANDLING MODAL AND FORM
+*/
+@media only screen and (max-width: 992px) {
+  .add {
+    display: none; } }
